--- a/CATEGORIAS-VEHICULOS/css/main.css
+++ b/CATEGORIAS-VEHICULOS/css/main.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
-    --clr-main: rgb(207, 191, 191);
+    --clr-main: rgb(207, 207, 191);
     --clr-main-light: #e21212;
-    --clr-white: #d80a0a;
+    --clr-white: #5e0808;
     --clr-gray: #000000;
     --clr-red: #ffffff;
 }
@@ -149,7 +149,7 @@ aside {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    --clr-white: #2caa12;
+    --clr-white: #3b8b2b;
 }
 
 .logo {
@@ -268,7 +268,7 @@ main {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, box-shadow 0.2s;
     width: 100%;
-    --clr-white: #141414;
+    --clr-white: #24333f;
 }
 
 .producto-imagen-container {
@@ -310,7 +310,7 @@ main {
 
 .producto-agregar {
     border: 0;
-    background-color: var(--clr-white);
+    background-color: #236840;
     color: var(--clr-main);
     padding: 0.5rem 3rem;
     text-transform: uppercase;
@@ -321,8 +321,8 @@ main {
 }
 
 .producto-agregar:hover {
-    background-color: var(--clr-main);
-    color: var(--clr-white);
+    background-color: #82a2bd;
+    color: #000000;
 }
 
 /** CARRITO **/
